k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-website-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: company-website.team2.arpa
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: company-website
                port:
                  number: 7000
